--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -26,7 +26,7 @@
 									<h1 class="major">Olá, meu nome<br />
 									é Rilen</h1>
 									<p>Sou formado em <strong>Cientista de Dados</strong>, e pós-graduando em <strong>Big Data</strong>.</p>
-									<p>It’s fully responsive, built on HTML5 and CSS3, and released entirely for free under the Creative Commons license. Hope you dig it :)</p>
+									<p>Este é o meu portfólio da nova vida de Cientista de Dados, demonstrando minha caminhada, aprendizado e habilidade de resolver problemas de informações e negócios, utilizando dados brutos em insights estratégicos.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -39,8 +39,8 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight medium right" id="first">
 								<div class="content span-7">
-									<h2 class="major">Sed etiam aenean</h2>
-									<p>Mauris et ligula arcu. Proin dapibus convallis accumsan. Lorem maximus hendrerit orci, sit amet elementum massa hendrerit sed. Donec et ullamcorper ligula. Suspendisse amet potenti. Ut pretium libero eleifend euismod sed tristique. Quisque dictum magna risus, id ultricies justo sagittis vitae. Sed id odio tempor, porttitor elit amet, gravida hendrerit fringilla lorem ipsum dolor.</p>
+									<h2 class="major">Insights Estratégicos</h2>
+									<p>Ciência de Dados é uma área multidisciplinar que combina matemática, estatística, computação e conhecimento de domínio para extrair conhecimento, prever tendências e informar decisões a partir de grandes conjuntos de dados</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
