--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -41,6 +41,7 @@
 								<div class="content span-7">
 									<h2 class="major">Insights Estratégicos</h2>
 									<p>Ciência de Dados é uma área multidisciplinar que combina matemática, estatística, computação e conhecimento de domínio para extrair conhecimento, prever tendências e informar decisões a partir de grandes conjuntos de dados</p>
+									<p>O objetivo é transformar dados brutos em insights estratégicos que ajudem a resolver problemas complexos em diversas áreas, como negócios, finanças, saúde e marketing.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top left">
 									<img src="images/pic02.jpg" alt="" />
