--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -23,8 +23,8 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-									<h1 class="major">Olá, meu nome<br />
-									é Rilen</h1>
+									<h1 class="major">Olá, meu nome é
+									Rilen</h1>
 									<p>Sou formado em <strong>Cientista de Dados</strong>, e pós-graduando em <strong>Big Data</strong>.</p>
 									<p>Este é o meu portfólio da nova vida de Cientista de Dados, demonstrando minha caminhada, aprendizado e habilidade de resolver problemas de informações e negócios, utilizando dados brutos em insights estratégicos.</p>
 									<ul class="actions">
