--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -23,13 +23,13 @@
 						<!-- Panel (Banner) -->
 							<section class="panel banner right">
 								<div class="content color0 span-3-75">
-			<h1 class="major">Olá, meu nome é Rilen</h1>
-			<p>Sou **Cientista de Dados** por formação e **Pós-graduando em Big Data**, com um portfólio dedicado a transformar dados brutos em **insights estratégicos** para a solução de problemas de negócios.</p>
-			<p>Minha trajetória é reforçada por uma base técnica e prática única, incluindo formações em **Agropecuária** e **Processamento de Dados**. Essas experiências me equipam com visões extraordinárias em áreas como **Geoprocessamento** e **Suporte de TI**, essenciais para buscar a melhor aplicação da Ciência de Dados para o crescimento do negócio.</p>
-			<ul class="actions">
-				<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
-			</ul>
-		</div>
+									<h1 class="major">Olá, meu nome é
+									Rilen</h1>
+									<p>Sou <strong>Cientista de Dados</strong> por formação e pós-graduando em <strong>Big Data</strong>, com um portfólio dedicado a transformar dados brutos em insights estratégicos para a solução de problemas de negócios.</p>
+									<ul class="actions">
+										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
+									</ul>
+								</div>
 								<div class="image filtered span-1-75" data-position="25% 25%">
 									<img src="images/pic01.jpg" alt="" />
 								</div>
@@ -51,7 +51,7 @@
 							<section class="panel color1">
 								<div class="intro joined">
 									<h2 class="major">Foco na Transição e Visão Estratégica</h2>
-									<p>Minha trajetória é reforçada por uma base técnica e prática única, incluindo formações em <strong>Agropecuária</strong> e <strong> Processamento de Dados</strong>. Essas experiências me equiparam com visões extraordinárias em áreas como <strong>Mapeamento da Área Rural</strong> e <strong> Geoprocessamento</strong>, que utilizo em consórcio com a Ciência de Dados.</p>
+									<p>Minha trajetória é reforçada por uma base técnica e prática única, incluindo formações em <strong>Agropecuária</strong> e <strong> Processamento de Dados</strong>. Essas experiências me equiparam com visões extraordinárias em <strong>convivência</strong> como <strong>Cientista de Dados</strong>.</p>
 									<p>Além disso, minha atuação como <strong>Suporte HelpDesk</strong> e <strong>Encarregado de TI</strong> aprimorou minha capacidade de <strong>atendimento ao usuário</strong> e compreensão dos desafios de <strong>Tecnologia da Informação</strong> no dia a dia. Combinando essa visão multidisciplinar, estou pronto para ir além do horizonte e buscar a melhor aplicação da Ciência de Dados para o crescimento do negócio.</p>
 								</div>
 								<div class="inner">
