--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -50,9 +50,8 @@
 						<!-- Panel -->
 							<section class="panel color1">
 								<div class="intro joined">
-									<h2 class="major">Visão Multidisciplinar Integrada</h2>
+									<h2 class="major">Bagagem Integrada</h2>
 									<p>Minha trajetória é consolidada por uma base técnica e prática única, incluindo formação em <strong>Agropecuária</strong> e <strong>Processamento de Dados</strong>. Essa bagagem me proporciona uma visão extraordinária e aplicada para a <strong>Ciência de Dados</strong>, especialmente em áreas como <strong>Geoprocessamento</strong> e análise de sistemas complexos.</p>
-									<p>Adicionalmente, minha experiência como <strong>Suporte HelpDesk</strong> e <strong>Encarregado de TI</strong> aprimorou minha capacidade de <strong>atendimento ao usuário</strong> e de compreender os desafios práticos da <strong>Tecnologia da Informação</strong> no ambiente de negócios. Essa visão multidisciplinar me permite ir além do horizonte e buscar a aplicação da Ciência de Dados que gera o maior impacto no crescimento do negócio.</p>
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
@@ -65,6 +64,24 @@
 									</ul>
 								</div>
 							</section>
+							
+						<!-- Panel -->
+							<section class="panel color2">
+								<div class="intro joined">
+									<h2 class="major">Visão Multidisciplinar Integrada</h2>
+									<p>Adicionalmente, minha experiência como <strong>Suporte HelpDesk</strong> e <strong>Encarregado de TI</strong> aprimorou minha capacidade de <strong>atendimento ao usuário</strong> e de compreender os desafios práticos da <strong>Tecnologia da Informação</strong> no ambiente de negócios. Essa visão multidisciplinar me permite ir além do horizonte e buscar a aplicação da Ciência de Dados que gera o maior impacto no crescimento do negócio.</p>
+								</div>
+								<div class="inner">
+									<ul class="grid-icons three connected">
+										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
+										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
+										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
+										<li><span class="icon solid fa-paper-plane"><span class="label">Sit</span></span></li>
+										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
+										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+									</ul>
+								</div>
+							</section>	
 
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
