--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -76,7 +76,7 @@
 										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
 										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
 										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid pie-chart"><span class="label">Sit</span></span></li>
+										<li><span class="icon solid fa-pie-chart"><span class="label">Sit</span></span></li>
 										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
 										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
 									</ul>
