--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -55,12 +55,12 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon solid fa-briefcase"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-leaf"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+										<li><span class="icon solid fa-briefcase"><span class="label">bagagem</span></span></li>
+										<li><span class="icon solid fa-camera-retro"><span class="label">camera</span></span></li>
+										<li><span class="icon solid fa-cog"><span class="label">motor</span></span></li>
+										<li><span class="icon solid fa-leaf"><span class="label">folha</span></span></li>
+										<li><span class="icon solid fa-file-text-o"><span class="label">arquivo</span></span></li>
+										<li><span class="icon solid fa-id-card-o"><span class="label">carteira</span></span></li>
 									</ul>
 								</div>
 							</section>
