--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -60,7 +60,7 @@
 										<li><span class="icon solid fa-cog"><span class="label">motor</span></span></li>
 										<li><span class="icon solid fa-leaf"><span class="label">folha</span></span></li>
 										<li><span class="icon solid fa-file-alt"><span class="label">arquivo</span></span></li>
-										<li><span class="icon solid fa-id-card-o"><span class="label">carteira</span></span></li>
+										<li><span class="icon solid fa-id-card"><span class="label">carteira</span></span></li>
 									</ul>
 								</div>
 							</section>
