--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Ethereal by HTML5 UP</title>
+		<title>Portfólio de Rilen - Cientista de Dados</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -58,7 +58,7 @@
 										<li><span class="icon solid fa-briefcase"><span class="label">bagagem</span></span></li>
 										<li><span class="icon solid fa-camera-retro"><span class="label">camera</span></span></li>
 										<li><span class="icon solid fa-cog"><span class="label">motor</span></span></li>
-										<li><span class="icon solid fa-leaf"><span class="label">folha</span></span></li>
+										<li><span class="icon solid fa-seedling"><span class="label">folha</span></span></li>
 										<li><span class="icon solid fa-file-alt"><span class="label">arquivo</span></span></li>
 										<li><span class="icon solid fa-id-card"><span class="label">carteira</span></span></li>
 									</ul>
@@ -74,9 +74,9 @@
 								<div class="inner">
 									<ul class="grid-icons three connected">
 										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-camera-retro"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-cog"><span class="label">Dolor</span></span></li>
-										<li><span class="icon solid fa-pie-chart"><span class="label">Sit</span></span></li>
+										<li><span class="icon solid fa-sliders-h"><span class="label">Ipsum</span></span></li>
+										<li><span class="icon solid fa-shapes"><span class="label">Dolor</span></span></li>
+										<li><span class="icon solid fa-project-diagram"><span class="label">Sit</span></span></li>
 										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
 										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
 									</ul>
