--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -73,12 +73,12 @@
 								</div>
 								<div class="inner">
 									<ul class="grid-icons three connected">
-										<li><span class="icon fa-gem"><span class="label">Lorem</span></span></li>
-										<li><span class="icon solid fa-sliders-h"><span class="label">Ipsum</span></span></li>
-										<li><span class="icon solid fa-shapes"><span class="label">Dolor</span></span></li>
+										<li><span class="icon fa-gem"><span class="label">diamante</span></span></li>
+										<li><span class="icon solid fa-sliders-h"><span class="label">opções</span></span></li>
+										<li><span class="icon solid fa-shapes"><span class="label">categoria</span></span></li>
 										<li><span class="icon solid fa-project-diagram"><span class="label">Sit</span></span></li>
-										<li><span class="icon solid fa-chart-bar"><span class="label">Amet</span></span></li>
-										<li><span class="icon solid fa-code"><span class="label">Nullam</span></span></li>
+										<li><span class="icon solid fa-chart-bar"><span class="label">gráfico</span></span></li>
+										<li><span class="icon solid fa-code"><span class="label">comando</span></span></li>
 									</ul>
 								</div>
 							</section>	
@@ -86,7 +86,7 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Magna amet tempus</h2>
+									<h2 class="major">Exemplos práticos</h2>
 									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
