--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Olá, meu nome é
 									Rilen</h1>
-									<p>Sou <strong>Cientista de Dados</strong> por formação e pós-graduando em <strong>Big Data</strong>, com um portfólio dedicado a transformar dados brutos em insights estratégicos para a solução de problemas de negócios.</p>
+									<p>Sou <strong>Cientista de Dados</strong> por formação e atualmente pós-graduando em <strong>Big Data</strong>. Compartilho aqui meu portfólio dedicado às áreas de Ciência de Dados e Big Data, nas quais atuo buscando dados brutos, categorizando informações e transformando-as em insights estratégicos para a solução de problemas de negócios.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
