--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -25,7 +25,7 @@
 								<div class="content color0 span-3-75">
 									<h1 class="major">Olá, meu nome é
 									Rilen</h1>
-									<p>Sou <strong>Cientista de Dados</strong> por formação e atualmente pós-graduando em <strong>Big Data</strong>. Compartilho aqui meu portfólio dedicado às áreas de Ciência de Dados e Big Data, nas quais atuo buscando dados brutos, categorizando informações e transformando-as em insights estratégicos para a solução de problemas de negócios.</p>
+									<p>Sou <strong>Cientista de Dados</strong> por formação e atualmente pós-graduando em <strong>Big Data</strong>. Compartilho aqui meu portfólio dedicado às áreas nas quais atuo buscando dados brutos, extrair informações e transformando-as em conhecimentos, tudo isso em busca de insights estratégicos.</p>
 									<ul class="actions">
 										<li><a href="#first" class="button primary color1 circle icon solid fa-angle-right">Next</a></li>
 									</ul>
@@ -86,8 +86,53 @@
 						<!-- Panel (Spotlight) -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">Exemplos práticos</h2>
-									<p>Mauris a cursus velit. Nunc lacinia sollicitudin egestas bibendum, magna dui bibendum ex, sagittis commodo enim risus sed magna nulla. Vestibulum ut consequat velit. Curabitur vitae libero lorem. Quisque iaculis porttitor blandit. Nullam quis sagittis maximus. Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar.</p>
+									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
+									<p>
+									<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
+<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
+<ul>
+<li>
+<p><strong>Fun&ccedil;&otilde;es Anal&iacute;ticas:</strong></p>
+<ul>
+<li>
+<p><span class="citation-73 citation-end-73">Formula&ccedil;&atilde;o de hip&oacute;teses verific&aacute;veis a partir de problemas de neg&oacute;cio</span>.&nbsp;</p>
+</li>
+<li>
+<p><span class="citation-72">Implementa&ccedil;&atilde;o de modelos estat&iacute;sticos e algoritmos de </span><em><span class="citation-72">machine learning</span></em>.&nbsp;</p>
+</li>
+<li>
+<p><span class="citation-71 citation-end-71">Avalia&ccedil;&atilde;o rigorosa de resultados e quantifica&ccedil;&atilde;o de incertezas</span>.&nbsp;</p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Fun&ccedil;&otilde;es Tecnol&oacute;gicas:</strong></p>
+<ul>
+<li>
+<p><span class="citation-70">Manipula&ccedil;&atilde;o e prepara&ccedil;&atilde;o de </span><em><span class="citation-70">datasets</span></em><span class="citation-70 citation-end-70"> de grande volume e complexidade</span>.&nbsp;</p>
+</li>
+<li>
+<p><span class="citation-69">Utiliza&ccedil;&atilde;o de </span><em><span class="citation-69">frameworks</span></em><span class="citation-69 citation-end-69"> de Big Data, como Spark e Hadoop</span>.&nbsp;</p>
+</li>
+</ul>
+</li>
+<li>
+<p><strong>Fun&ccedil;&otilde;es Estrat&eacute;gicas:</strong></p>
+<ul>
+<li>
+<p><span class="citation-68 citation-end-68">Tradu&ccedil;&atilde;o de quest&otilde;es de neg&oacute;cio em problemas anal&iacute;ticos estruturados</span>.&nbsp;</p>
+</li>
+<li>
+<p><span class="citation-67">Comunica&ccedil;&atilde;o efetiva de </span><em><span class="citation-67">insights</span></em><span class="citation-67"> t&eacute;cnicos para </span><em><span class="citation-67">stakeholders</span></em><span class="citation-67 citation-end-67"> n&atilde;o-t&eacute;cnicos</span>.&nbsp;</p>
+</li>
+<li>
+<p><span class="citation-66 citation-end-66">Prioriza&ccedil;&atilde;o de iniciativas com base em potencial de impacto</span>.&nbsp;</p>
+</li>
+</ul>
+</li>
+</ul>
+<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>	
+									</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
@@ -97,7 +142,7 @@
 						<!-- Panel -->
 							<section class="panel">
 								<div class="intro color2">
-									<h2 class="major">Elit integer</h2>
+									<h2 class="major">Ferramentas poderosas</h2>
 									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
 								</div>
 								<div class="gallery">
