--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -88,54 +88,84 @@
 								<div class="content span-5">
 									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
 									<p>
-									<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
-<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
-<ul>
-<li>
-<p><strong>Fun&ccedil;&otilde;es Anal&iacute;ticas:</strong></p>
-<ul>
-<li>
-<p><span class="citation-73 citation-end-73">Formula&ccedil;&atilde;o de hip&oacute;teses verific&aacute;veis a partir de problemas de neg&oacute;cio</span>.&nbsp;</p>
-</li>
-<li>
-<p><span class="citation-72">Implementa&ccedil;&atilde;o de modelos estat&iacute;sticos e algoritmos de </span><em><span class="citation-72">machine learning</span></em>.&nbsp;</p>
-</li>
-<li>
-<p><span class="citation-71 citation-end-71">Avalia&ccedil;&atilde;o rigorosa de resultados e quantifica&ccedil;&atilde;o de incertezas</span>.&nbsp;</p>
-</li>
-</ul>
-</li>
-<li>
-<p><strong>Fun&ccedil;&otilde;es Tecnol&oacute;gicas:</strong></p>
-<ul>
-<li>
-<p><span class="citation-70">Manipula&ccedil;&atilde;o e prepara&ccedil;&atilde;o de </span><em><span class="citation-70">datasets</span></em><span class="citation-70 citation-end-70"> de grande volume e complexidade</span>.&nbsp;</p>
-</li>
-<li>
-<p><span class="citation-69">Utiliza&ccedil;&atilde;o de </span><em><span class="citation-69">frameworks</span></em><span class="citation-69 citation-end-69"> de Big Data, como Spark e Hadoop</span>.&nbsp;</p>
-</li>
-</ul>
-</li>
-<li>
-<p><strong>Fun&ccedil;&otilde;es Estrat&eacute;gicas:</strong></p>
-<ul>
-<li>
-<p><span class="citation-68 citation-end-68">Tradu&ccedil;&atilde;o de quest&otilde;es de neg&oacute;cio em problemas anal&iacute;ticos estruturados</span>.&nbsp;</p>
-</li>
-<li>
-<p><span class="citation-67">Comunica&ccedil;&atilde;o efetiva de </span><em><span class="citation-67">insights</span></em><span class="citation-67"> t&eacute;cnicos para </span><em><span class="citation-67">stakeholders</span></em><span class="citation-67 citation-end-67"> n&atilde;o-t&eacute;cnicos</span>.&nbsp;</p>
-</li>
-<li>
-<p><span class="citation-66 citation-end-66">Prioriza&ccedil;&atilde;o de iniciativas com base em potencial de impacto</span>.&nbsp;</p>
-</li>
-</ul>
-</li>
-</ul>
-<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>	
-									</p>
+										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
+										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
+									<ul>
+										<li>
+											<p><strong>Fun&ccedil;&otilde;es Anal&iacute;ticas:</strong></p>
+											<ul>
+												<li>
+													<p><span class="citation-73 citation-end-73">Formula&ccedil;&atilde;o de hip&oacute;teses verific&aacute;veis a partir de problemas de neg&oacute;cio</span>.&nbsp;</p>
+												</li>
+												<li>
+													<p><span class="citation-72">Implementa&ccedil;&atilde;o de modelos estat&iacute;sticos e algoritmos de </span><em><span class="citation-72">machine learning</span></em>.&nbsp;</p>
+												</li>
+												<li>
+													<p><span class="citation-71 citation-end-71">Avalia&ccedil;&atilde;o rigorosa de resultados e quantifica&ccedil;&atilde;o de incertezas</span>.&nbsp;</p>
+												</li>
+											</ul>
+										</li>
+									</ul>
+									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
+								</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
+								</div>
+							</section>
+						<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
+									<p>
+										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
+										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
+									<ul>
+										<li>
+											<p><strong>Fun&ccedil;&otilde;es Tecnol&oacute;gicas:</strong></p>
+											<ul>
+												<li>
+													<p><span class="citation-70">Manipula&ccedil;&atilde;o e prepara&ccedil;&atilde;o de </span><em><span class="citation-70">datasets</span></em><span class="citation-70 citation-end-70"> de grande volume e complexidade</span>.&nbsp;</p>
+												</li>
+												<li>
+													<p><span class="citation-69">Utiliza&ccedil;&atilde;o de </span><em><span class="citation-69">frameworks</span></em><span class="citation-69 citation-end-69"> de Big Data, como Spark e Hadoop</span>.&nbsp;</p>
+												</li>
+											</ul>
+										</li>
+									</ul>
+									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
+								</p>
+								</div>
+								<div class="image filtered tinted" data-position="top right">
+									<img src="images/pic04.jpg" alt="" />
+								</div>
+							</section>
+						<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
+									<p>
+										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
+										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
+									<ul>
+										<li>
+											<p><strong>Fun&ccedil;&otilde;es Estrat&eacute;gicas:</strong></p>
+											<ul>
+												<li>
+													<p><span class="citation-68 citation-end-68">Tradu&ccedil;&atilde;o de quest&otilde;es de neg&oacute;cio em problemas anal&iacute;ticos estruturados</span>.&nbsp;</p>
+												</li>
+												<li>
+													<p><span class="citation-67">Comunica&ccedil;&atilde;o efetiva de </span><em><span class="citation-67">insights</span></em><span class="citation-67"> t&eacute;cnicos para </span><em><span class="citation-67">stakeholders</span></em><span class="citation-67 citation-end-67"> n&atilde;o-t&eacute;cnicos</span>.&nbsp;</p>
+												</li>
+												<li>
+													<p><span class="citation-66 citation-end-66">Prioriza&ccedil;&atilde;o de iniciativas com base em potencial de impacto</span>.&nbsp;</p>
+												</li>
+											</ul>
+										</li>
+									</ul>
+									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
+								</p>
+								</div>
+								<div class="image filtered tinted" data-position="top right">
+									<img src="images/pic05.jpg" alt="" />
 								</div>
 							</section>
 
