--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -83,7 +83,32 @@
 								</div>
 							</section>	
 
-						<!-- Panel (Spotlight) -->
+						<!-- Panel (Spotlight) As Funções-->
+							<section class="panel spotlight large left">
+								<div class="content span-5">
+									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
+									<p>
+										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
+										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
+									<ul>
+										<li>
+											<p><strong>Fun&ccedil;&otilde;es Anal&iacute;ticas:</strong></p>
+										</li>
+										<li>
+											<p><strong>Fun&ccedil;&otilde;es Tecnol&oacute;gicas:</strong></p>
+										</li>
+										<li>
+											<p><strong>Fun&ccedil;&otilde;es Estrat&eacute;gicas:</strong></p>
+										</li>
+									</ul>
+									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
+								</p>
+								</div>
+								<div class="image filtered tinted" data-position="top right">
+									<img src="images/pic03.jpg" alt="" />
+								</div>
+							</section>
+						<!-- Panel (Spotlight) Analíticas-->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
@@ -110,10 +135,10 @@
 								</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic03.jpg" alt="" />
+									<img src="images/pic04.jpg" alt="" />
 								</div>
 							</section>
-						<section class="panel spotlight large left">
+							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
 									<p>
@@ -136,10 +161,10 @@
 								</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic04.jpg" alt="" />
+									<img src="images/pic05.jpg" alt="" />
 								</div>
 							</section>
-						<section class="panel spotlight large left">
+							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
 									<p>
@@ -165,7 +190,7 @@
 								</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
-									<img src="images/pic05.jpg" alt="" />
+									<img src="images/pic06.jpg" alt="" />
 								</div>
 							</section>
 
