--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -83,7 +83,7 @@
 								</div>
 							</section>	
 
-						<!-- Panel (Spotlight) As Funções-->
+						<!-- Panel (Spotlight) As Funções -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
 									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
@@ -111,12 +111,6 @@
 						<!-- Panel (Spotlight) Analíticas-->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
-									<p>
-										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
-										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
-									<ul>
-										<li>
 											<p><strong>Fun&ccedil;&otilde;es Anal&iacute;ticas:</strong></p>
 											<ul>
 												<li>
@@ -131,21 +125,15 @@
 											</ul>
 										</li>
 									</ul>
-									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
 								</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic04.jpg" alt="" />
 								</div>
 							</section>
+						<!-- Panel (Spotlight) Tecnológicas -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
-									<p>
-										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
-										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
-									<ul>
-										<li>
 											<p><strong>Fun&ccedil;&otilde;es Tecnol&oacute;gicas:</strong></p>
 											<ul>
 												<li>
@@ -157,21 +145,15 @@
 											</ul>
 										</li>
 									</ul>
-									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
 								</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic05.jpg" alt="" />
 								</div>
 							</section>
+						<!-- Panel (Spotlight) Estratégicas -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
-									<p>
-										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
-										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
-									<ul>
-										<li>
 											<p><strong>Fun&ccedil;&otilde;es Estrat&eacute;gicas:</strong></p>
 											<ul>
 												<li>
@@ -186,7 +168,6 @@
 											</ul>
 										</li>
 									</ul>
-									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
 								</p>
 								</div>
 								<div class="image filtered tinted" data-position="top right">
