--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -86,7 +86,7 @@
 						<!-- Panel (Spotlight) As Funções -->
 							<section class="panel spotlight large left">
 								<div class="content span-5">
-									<h2 class="major">O Papel Multifacetado do Cientista de Dados</h2>
+									<h2 class="major">O Papel Multifacetado</h2>
 									<p>
 										<h3><span class="citation-74 citation-end-74">O cientista de dados &eacute; um profissional estrat&eacute;gico que atua na intersec&ccedil;&atilde;o entre compet&ecirc;ncias anal&iacute;ticas, conhecimento de neg&oacute;cios e habilidades tecnol&oacute;gicas</span>.</h3>
 										<p>As fun&ccedil;&otilde;es do cientista de dados incluem:</p>
