--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -101,7 +101,7 @@
 											<p><strong>Fun&ccedil;&otilde;es Estrat&eacute;gicas:</strong></p>
 										</li>
 									</ul>
-									<p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p>
+									<!-- <p><span class="citation-65 citation-end-65">Em resumo, o cientista de dados transforma Big Data em conhecimento acion&aacute;vel para a tomada de decis&otilde;es</span>.</p> -->
 								</div>
 								<div class="image filtered tinted" data-position="top right">
 									<img src="images/pic03.jpg" alt="" />
