--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -176,7 +176,7 @@
 							<section class="panel">
 								<div class="intro color2">
 									<h2 class="major">Ferramentas poderosas</h2>
-									<p>Sed vel nibh libero. Mauris et lorem pharetra massa lorem turpis congue pulvinar. Vivamus sed feugiat finibus. Duis amet bibendum amet sed. Duis mauris ex, dapibus sed ligula tempus volutpat magna etiam.</p>
+									<p>Para um cientista de dados, as ferramentas mais poderosas combinam linguagens de programação versáteis com bibliotecas especializadas, ambientes de desenvolvimento e plataformas para visualização e aprendizado de máquina. A escolha ideal dependerá da tarefa específica, do volume de dados e da complexidade do projeto.</p>
 								</div>
 								<div class="gallery">
 									<div class="group span-3">
