--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -129,7 +129,7 @@
 											<i class="icon brands fa-github"></i> Ver Repositório
 										</span>
 									</a>													---
-									<a href="https://github.com/rilen/PROJETO-DASHBOARD-ST" target="_blank" class="image filtered span-1-5">
+									<a href="https://github.com/rilen/PROJETO-DASHBOARD-ST" target="_blank" class="image filtered span-1-5" data-position="center">
 										<img src="images/gallery/thumbs/05.jpg" alt="Miniatura do Projeto de Dashboard Interativo" />
 										<span class="caption">
 											<span class="title">KPIs de Negócio (Dashboard Interativo)</span>
@@ -137,7 +137,7 @@
 											<i class="icon brands fa-github"></i> Ver Repositório
 										</span>
 									</a>
-									<a href="https://github.com/rilen/PROJETO-DASHBOARD-ST" target="_blank" class="image filtered span-1-5"
+									<a href="https://github.com/rilen/PROJETO-DASHBOARD-ST" target="_blank" class="image filtered span-1-5" data-position="bottom">
 										<img src="images/gallery/thumbs/05.jpg" alt="Miniatura do Projeto de Dashboard Interativo" />
 										<span class="caption">
 											<span class="title">KPIs de Negócio (Dashboard Interativo)</span>
@@ -154,7 +154,7 @@
 										</span>
 									</a>
 							</div>
-								<a href="https://github.com/rilen/PROJETO-EXEMPLO-6" target="_blank" class="image filtered span-3" data-position="top">
+								<a href="https://github.com/rilen/PROJETO-EXEMPLO-6" target="_blank" class="image filtered span-2-5" data-position="right">
 									<img src="images/gallery/thumbs/06.jpg" alt="Miniatura do Projeto de Limpeza e Transformação de Dados" />
 									<span class="caption">
 										<span class="title">Limpeza e Transformação de Dados (ETL)</span>
