--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -80,8 +80,8 @@
                                 </div>
                             </section>
 
-						<section class="panel color2" id="projects">
-							<div class="intro joined">
+						<section class="panel" id="projects">
+							<div class="intro color2">
 								<h2 class="major">Meus Projetos (Showcase de Códigos)</h2>
 								<p>Cada miniatura representa um projeto completo. Clique para acessar o repositório no GitHub, onde você encontrará o **código-fonte, a metodologia e os resultados** da análise de dados.</p>
 							</div>
