Enhance gallery with project details and images
Added project descriptions and images for data analysis projects.

--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -166,12 +166,47 @@
 
 								<a href="images/gallery/fulls/04.jpg" class="image filtered span-2-5" data-position="top"><img src="images/gallery/thumbs/04.jpg" alt="" /></a>
 									<div class="group span-4-5">
-										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/05.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center"><img src="images/gallery/thumbs/06.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom"><img src="images/gallery/thumbs/07.jpg" alt="" /></a>
-										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top"><img src="images/gallery/thumbs/08.jpg" alt="" /></a>
+										<a href="images/gallery/fulls/05.jpg" class="image filtered span-3" data-position="top">
+											<img src="images/gallery/thumbs/06.jpg" alt="Miniatura do Projeto de Séries Temporais" />
+										<span class="caption">
+											<span class="title">Previsão de Demanda (Séries Temporais)</span>
+											<p>Modelos ARIMA/Prophet para prever a demanda futura de um produto e otimizar estoque. Stack: Python, Statsmodels, Prophet.</p>
+											<i class="icon brands fa-github"></i> Ver Repositório
+										</span>	
+										</a>
+										<a href="images/gallery/fulls/06.jpg" class="image filtered span-1-5" data-position="center">
+											<img src="images/gallery/thumbs/04.jpg" alt="Miniatura do Projeto de Séries Temporais" />
+										<span class="caption">
+											<span class="title">Previsão de Demanda (Séries Temporais)</span>
+											<p>Modelos ARIMA/Prophet para prever a demanda futura de um produto e otimizar estoque. Stack: Python, Statsmodels, Prophet.</p>
+											<i class="icon brands fa-github"></i> Ver Repositório
+										</span>
+										</a>
+										<a href="images/gallery/fulls/07.jpg" class="image filtered span-1-5" data-position="bottom">
+											<img src="images/gallery/thumbs/04.jpg" alt="Miniatura do Projeto de Dashboard Interativo" />
+											<span class="caption">
+												<span class="title">KPIs de Negócio (Dashboard Interativo)</span>
+												<p>Dashboard interativo criado com Streamlit para acompanhamento de métricas críticas em tempo real. Stack: Streamlit, Pandas, SQL.</p>
+												<i class="icon brands fa-github"></i> Ver Repositório
+											</span>	
+										</a>
+										<a href="images/gallery/fulls/08.jpg" class="image filtered span-3" data-position="top">
+											<img src="images/gallery/thumbs/05.jpg" alt="Miniatura do Projeto de Limpeza e Transformação de Dados" />
+											<span class="caption">
+												<span class="title">Limpeza e Transformação de Dados (ETL)</span>
+												<p>Script de ETL focado em tratamento de dados ausentes e inconsistentes para garantir a qualidade analítica. Stack: Python, SQLAlchemy, Docker.</p>
+												<i class="icon brands fa-github"></i> Ver Repositório
+											</span>	
+										</a>
 									</div>
-									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right"><img src="images/gallery/thumbs/09.jpg" alt="" /></a>
+									<a href="images/gallery/fulls/09.jpg" class="image filtered span-2-5" data-position="right">
+										<img src="images/gallery/thumbs/06.jpg" alt="Miniatura do Projeto de Limpeza e Transformação de Dados" />
+										<span class="caption">
+											<span class="title">Limpeza e Transformação de Dados (ETL)</span>
+											<p>Script de ETL focado em tratamento de dados ausentes e inconsistentes para garantir a qualidade analítica. Stack: Python, SQLAlchemy, Docker.</p>
+											<i class="icon brands fa-github"></i> Ver Repositório
+										</span>									
+									</a>
 
 								
 								
