--- a/projeto/index.html
+++ b/projeto/index.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Dashboard Excel Dinâmico · GitHub Pages</title>
 
-    <link href="bootstrap.min.css" rel="stylesheet"> 
+    <link href="assets/bootstrap.min.css" rel="stylesheet"> 
     
-    <link href="dashboard.css" rel="stylesheet">
+    <link href="assets/dashboard.css" rel="stylesheet">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/xlsx/0.18.5/xlsx.full.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js@2.9.4/dist/Chart.min.js" crossorigin="anonymous"></script> 
