--- a/graph_xlsx/index.html
+++ b/graph_xlsx/index.html
@@ -52,7 +52,7 @@
     <main class="col-12 px-md-4"> 
       
       <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
-        <h1 class="h2">Evolução Semanal Consolidada</h1>
+        <h1 class="h2">Evolução Mensal Consolidada</h1>
         <div class="btn-toolbar mb-2 mb-md-0">
           <div class="upload-area">
             <label for="excel-upload" class="btn btn-sm btn-primary">
