--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -89,6 +89,10 @@
 								<div class="group span-3">
 									<a href="https://github.com/rilen/PROJETO-CHURN-REAL" target="_blank" class="image filtered span-3" data-position="bottom">
 										<img src="images/gallery/thumbs/01.jpg" alt="Miniatura do Projeto de Previsão de Churn" />
+										<div class="intro color2">
+											<h2 class="major">Meus Projetos (Showcase de Códigos)</h2>
+											<p>Cada miniatura representa um projeto completo. Clique para acessar o repositório no GitHub, onde você encontrará o **código-fonte, a metodologia e os resultados** da análise de dados.</p>
+										</div>
 										<span class="caption">
 											<span class="title">Previsão de Churn de Clientes (ML)</span>
 											<p>Modelo de Classificação para identificar clientes em risco de cancelamento. Stack: Python, Scikit-learn, AWS S3.</p>
