--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -87,8 +87,8 @@
 							</div>
 							<div class="gallery">
 								<div class="group span-3">
-									<a href="https://github.com/rilen/PROJETO-CHURN-REAL" target="_blank" class="image filtered span-3" data-position="bottom">
-										<img src="images/gallery/thumbs/01.jpg" alt="Miniatura do Projeto de Previsão de Churn" />
+									<a href="https://github.com/rilen/rilen.github.io/tree/main/graph_xlsx" target="_blank" class="image filtered span-3" data-position="bottom">
+										<img src="images/gallery/thumbs/01.jpg" alt="Projeto Excel para gráfico" />
 										<div class="intro color2">
 											<h2 class="major">Excel para gráfico</h2>
 										</div>
