--- a/portfolio_ds/index.html
+++ b/portfolio_ds/index.html
@@ -52,7 +52,33 @@
 									</ul>
 								</div>
 							</section>
-
+							<section class="panel spotlight medium right" id="first">
+								<div class="content span-7">
+									<h2 class="major">O Cientista de Dados na Prática</h2>
+                                        <p>Atuo na intersecção entre competências analíticas, conhecimento de negócios e habilidades tecnológicas, transformando dados em resultados tangíveis.</p>
+                                        
+                                        <div class="span-5">
+                                            <h3><i class="icon solid fa-brain"></i> Funções Analíticas</h3>
+                                            <ul>
+                                                <li>Implementação de modelos estatísticos e algoritmos de Machine Learning.</li>
+                                                <li>Formulação de hipóteses verificáveis a partir de problemas de negócio.</li>
+                                                <li>Avaliação rigorosa de resultados e quantificação de incertezas.</li>
+                                            </ul>
+                                        </div>
+                                        
+                                        <div class="span-5">
+                                            <h3><i class="icon solid fa-tools"></i> Funções Tecnológicas</h3>
+                                            <ul>
+                                                <li>Manipulação e preparação de grandes datasets (ETL).</li>
+                                                <li>Utilização de frameworks de Big Data (Spark, Hadoop).</li>
+                                                <li>Comunicação efetiva de insights técnicos para stakeholders não-técnicos.</li>
+                                            </ul>
+                                        </div>
+								</div>
+								<div class="image filtered tinted" data-position="top left">
+									<img src="images/pic02.jpg" alt="" />
+								</div>
+							</section>
 						<section class="panel color3-alt">
                                 <div class="inner columns">
                                     <div class="span-6">
